Update index.html - typo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Likay: Plataforma educativa con realidad aumentada.">
     <meta name="keywords" content="educación, realidad aumentada, AR, plataforma educativa, modelos 3D">
-    <title>Likai - Aprende tocando, visualiza en 3D, domina jugando</title>
+    <title>Likay - Aprende tocando, visualiza en 3D, domina jugando</title>
     
     <!-- Schema.org markup for Google -->
     <script type="application/ld+json">
