--- a/index.html
+++ b/index.html
@@ -871,7 +871,7 @@
                 </div>
             </div>
             
-            <a href="https://drive.google.com/file/d/15nmwrjOzjhAVOZ8G-unlAOG31XFJJoh_/view?usp=drive_link" download class="nav-item">Descarga</a>
+            <a href="https://drive.google.com/file/d/1gj3q5v_P6DqEsIEvCew9DOr6Q0S6jfj8/view?usp=sharing" download class="nav-item">Descarga</a>
             
             <a href="https://wa.me/51917806967?text=Hola%20Tunki%20Games%2C%20tengo%20una%20duda%2Fsugerencia%20sobre%20Likay%2E%20" class="nav-item" target="_blank">Contacto</a>
         </nav>
@@ -887,7 +887,7 @@
                     <p class="hero-subtitle">Escanea tarjetas educativas y descubre modelos 3D interactivos que transforman el aprendizaje</p>
                     <div class="hero-cta">
                         <a href="verDemo.html" class="btn btn-primary">Ver Demo</a>
-                        <a href="https://drive.google.com/file/d/15nmwrjOzjhAVOZ8G-unlAOG31XFJJoh_/view?usp=drive_link" class="btn btn-primary">Comenzar Ahora</a>
+                        <a href="https://drive.google.com/file/d/1gj3q5v_P6DqEsIEvCew9DOr6Q0S6jfj8/view?usp=sharing" class="btn btn-primary">Comenzar Ahora</a>
                     </div>
                 </div>
                 <div class="hero-image">
