--- a/infografiaProcariota.html
+++ b/infografiaProcariota.html
@@ -123,7 +123,7 @@
                 </div>
             </div>
             
-            <a href="https://drive.google.com/file/d/1T4NVGAhfXgodrL5ICAfPPtZYhZNWVobK/view?usp=drive_link" download class="nav-item">Descarga</a>
+            <a href="https://drive.google.com/file/d/1gj3q5v_P6DqEsIEvCew9DOr6Q0S6jfj8/view?usp=sharing" download class="nav-item">Descarga</a>
             
             <a href="mailto:joseaaron207@gmail.com?subject=Likay - Consultas y Sugerencias" class="nav-item">Contacto</a>
         </nav>
