[MOD] Actualizadas las páginas con el icon y readme.md

--- a/verDemo.html
+++ b/verDemo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Likay - Ver Demo</title>
+    <link rel="icon" href="LikayLogo.png" type="image/png">
     <style>
         /* Estilos del Menú Superior (Copia y pega el CSS que ya tienes) */
         .navbar {
