--- a/infografiaPlanetas.html
+++ b/infografiaPlanetas.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Likay - Infografía de Vapeo</title>
+    <link rel="icon" href="LikayLogo.png" type="image/png">
     <style>
         /* [Aquí va todo el CSS del Menú Superior que ya definimos (copia y pega)] */
         .navbar {
