[MOD] Section en index.html para mostrar tarjetas de ejemplo [ADD] tarjetas para referencia

--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@
                     <p class="hero-subtitle">Escanea tarjetas educativas y descubre modelos 3D interactivos que transforman el aprendizaje</p>
                     <div class="hero-cta">
                         <a href="verDemo.html" class="btn btn-primary">Ver Demo</a>
-                        <a href="https://drive.google.com/file/d/1gj3q5v_P6DqEsIEvCew9DOr6Q0S6jfj8/view?usp=sharing" class="btn btn-primary">Comenzar Ahora</a>
+                        <a href="#try-likay" class="btn btn-primary">Comenzar Ahora</a>
                     </div>
                 </div>
                 <div class="hero-image">
@@ -1025,6 +1025,26 @@
                         <h3 class="use-case-title">🌍 Ciencia espacial</h3>
                         <p class="use-case-description">Tarjeta de sistema solar → Exploración AR de los planetas del sistema solar. Vive una experiencia inmersiva en el vasto espacio exterior.</p>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Try Likay Section -->
+    <section class="section" id="try-likay">
+        <div class="container">
+            <h2 class="section-title fade-in">Prueba Likay</h2>
+            <p class="section-subtitle fade-in">
+                Descarga la aplicación haciendo click en "Descarga" en el menú de arriba. 
+                Dentro de la aplicación instalada, apunta a estas tarjetas de ejemplo para probar Likay
+            </p>
+            
+            <div style="display: flex; justify-content: center; gap: 30px; margin-top: 40px; flex-wrap: wrap;">
+                <div style="text-align: center;">
+                    <img src="1.png" alt="Tarjeta de ejemplo 1" style="max-width: 250px; height: auto; border-radius: 8px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
+                </div>
+                <div style="text-align: center;">
+                    <img src="3.png" alt="Tarjeta de ejemplo 3" style="max-width: 250px; height: auto; border-radius: 8px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
                 </div>
             </div>
         </div>
