--- a/index.html
+++ b/index.html
@@ -1084,6 +1084,31 @@
             </div>
         </div>
     </section>
+    <!-- Request New Collection Section -->
+    <section class="section" id="request-collection">
+        <div class="container">
+            <h2 class="section-title fade-in">Solicita una Nueva Colección</h2>
+            <p class="section-subtitle fade-in">
+                ¿Tienes una idea para una nueva colección educativa? Completa el siguiente formulario 
+                y nuestro equipo evaluará tu propuesta.
+            </p>
+            
+            <div style="display: flex; justify-content: center; margin-top: 40px;">
+                <div style="width: 100%; max-width: 700px; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);">
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdnn0Zv1G_hCewh_fElMuerV9T5tVHpJsQs2AciXppMCiGflw/viewform?embedded=true" 
+                            width="100%" 
+                            height="700" 
+                            frameborder="0" 
+                            marginheight="0" 
+                            marginwidth="0"
+                            style="min-height: 700px;">
+                        Cargando…
+                    </iframe>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- Footer -->
     <footer class="footer">
@@ -1115,6 +1140,8 @@
             </div>
         </div>
     </footer>
+
+
 
     <!-- Scroll to top button -->
     <div class="scroll-top" id="scrollTop">
